# direct-message-language

./: .gitignore  ad4m.json  adapter.ts  index.ts  package-lock.json  package.json
hc-dna/: Cargo.toml  default.nix
hc-dna/tests/: package-lock.json  package.json
hc-dna/tests/src/: index.ts
hc-dna/workdir/: dna.yaml
hc-dna/zomes/anchored-expression/: Cargo.toml
hc-dna/zomes/anchored-expression/src/: lib.rs
hc-dna/zomes/direct-message/: Cargo.toml
hc-dna/zomes/direct-message-integrity/: Cargo.toml
hc-dna/zomes/direct-message-integrity/src/: ad4m.rs  lib.rs
hc-dna/zomes/direct-message/src/: ad4m.rs  lib.rs  test_inspect.rs
